--- a/config-sample.json
+++ b/config-sample.json
@@ -5,5 +5,9 @@
         "server": "",
         "database": "sample_airbnb",
         "collection": "listingsAndReviews"
+    },
+    "logging": {
+        "logging_path": "logs",
+        "log_file_date_prefix": "%Y%m%d"
     }
 }
